# agentic-playground

./: .env.example  .gitignore  CI_CD_SETUP.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  MEMORY_SYSTEM.md  README.md  UV_GUIDE.md  WEBUI_GUIDE.md  pyproject.toml  pytest.ini  requirements.txt  verify_setup.py
.github/workflows/: code-quality.yml  pr-validation.yml  release.yml  tests.yml
agentic_playground/: __init__.py
agentic_playground/agents/: __init__.py  coordinator_agent.py  echo_agent.py
agentic_playground/core/: __init__.py  agent.py  llm_agent.py  message.py  orchestrator.py
agentic_playground/examples/: __init__.py  coordination_demo.py  debate.py  memory_demo.py  memory_search_demo.py  session_restore_demo.py  simple_conversation.py  webui_demo.py  webui_quickstart.py
agentic_playground/llm/: __init__.py  base.py
agentic_playground/llm/providers/: __init__.py  anthropic_provider.py  openai_provider.py
agentic_playground/memory/: __init__.py  context.py  importance.py  manager.py  models.py  query.py
agentic_playground/memory/storage/: __init__.py  base.py  sqlite.py
agentic_playground/memory/utils/: __init__.py  (+2 more)
agentic_playground/webui/: __init__.py  interface.py
detailed_documentation/: 00_INDEX.md  01_INTRODUCTION_TO_AGENTIC_AI.md  02_CORE_CONCEPTS.md  03_GETTING_STARTED.md  04_AGENTS_AND_MESSAGING.md  05_LLM_INTEGRATION.md  06_ORCHESTRATION.md  07_MEMORY_SYSTEM.md  08_WEB_UI.md  09_BUILDING_APPLICATIONS.md  10_ADVANCED_PATTERNS.md  11_API_REFERENCE.md  12_TROUBLESHOOTING.md
tests/: __init__.py  test_basic.py  test_memory.py
